Fixed the grid responsiveness and text readability

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -33,8 +33,8 @@
     .filter__panel{
         &--link{
             * {
-                width: calc(calc(calc(75vw - 2rem) / 3) - 4rem);
-                height: calc(calc(calc(75vw - 2rem) / 3) - 4rem);
+                width: calc(calc(calc(75vw - 4rem) / 3) - 2rem);
+                height: calc(calc(calc(75vw - 4rem) / 3) - 2rem);
             }
         }
         
@@ -60,8 +60,8 @@
     .filter__panel{
         &--link{
             * {
-                width: calc(calc(calc(75vw - 2rem) / 4) - 6rem);
-                height: calc(calc(calc(75vw - 2rem) / 4) - 6rem);
+                width: calc(calc(calc(75vw - 6rem) / 4) - 2rem);
+                height: calc(calc(calc(75vw - 6rem) / 4) - 2rem);
             }
         }
         
